public/style/styles-compiler.scss
/* ---------------------------------------- */
/* Variables */

// Hex instead of RGBA for ie8 support
$text-secondary: #555;
// rgba for non-critical styling

$gray-lighter: rgb(248,248,248);
$gray-lightest: rgb(248,248,248);
$site-background: $gray-lightest;

$blue: #4990E2;
$blue-darker: #2B598E;

$fallback-unit-spacing: 8px;
$unit-spacing: .5em;

$box-shadow: 0 1px 1px rgba(77,77,77, .3);

$font-larger: 1.2em;
$font-smaller: .8em;

$border: 1px solid $gray-lighter;

/* ---------------------------------------- */
/* Resets */

html {
    // Prevent adjustments of font size after orientation changes in IE and iOS. */
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
}

* {
    box-sizing: border-box;
}

a, a:visited {
    color: $blue;
    transition: all linear 125ms;
    transition-property:box-shadow, color, border-bottom;
    text-decoration: none;
    border-bottom: 1px dotted $blue;
    /* tasteful descenders */
    // once 'text-decoration-skip' is supported
        // read https://drafts.csswg.org/css-text-decor-3/#text-underline-position-property
        // read https://drafts.csswg.org/css-text-decor-3/#text-decoration-skip-property
    text-shadow: -1px -1px 0 $gray-lightest, // left top
                1px -1px 0 $gray-lightest, // right top
                -1px 1px 0 $gray-lightest, // left bottom
                1px 1px 0 $gray-lightest, // right bottom
                0 2px 0 $gray-lightest; // bottom bottom
 }

 a:hover, a:active, a:focus {
    box-shadow: 0px 1px 1px $gray-lightest;
    color: $blue-darker;
    border-bottom: 1px solid $blue-darker;
}

html, body, div, span, article, header, footer, ol, ul, li, p {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    // font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, footer, header, nav, section {
    display: block;
}

ol, ul {
    list-style: none;
}

body {
    line-height: 1.25;
    // Default system fonts in different operating systems
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
    margin: 0;
    font-size: 16px;
    font-size: calc(1em + .5vw);
    background: $gray-lightest;

    // background: #E0EAFC; /* fallback for old browsers */
    // background: -webkit-linear-gradient(to bottom, #fff , #CFDEF3);
    // background: linear-gradient(to bottom, #fff , #CFDEF3);
}

/* ---------------------------------------- */
/* Type */

// h1,h2,h3,h4,h5,h6, .active {
//     font-weight: 700;
// }

h1,h2,h3,h4,h5,h6, p {
    margin-top: 0;
    margin-bottom: .3em;
}

.small {
    font-size: $font-smaller;
}

.large {
    font-size: $font-larger;
}

.muted {
    color: $text-secondary;
    font-weight: normal;
}

/* ---------------------------------------- */
/* Structural */

.container {
    max-width: 55rem;
    margin: 0 auto 1em;

}

/* ---------------------------------------- */
/* Components */

/* Change location */

#change-location {
    @extend .large;
    border-width: 1px;
    border-color: $blue;
    // border-right: 0;
    padding: .3em .1em .3em .3em;
    flex: 1;
    &:hover, &:active, &:focus {
        border-color: $blue-darker
    }
}

label {
    display: inline-block;
    margin-bottom: .3em;
}

input {
    flex: 1;
    min-width: 60%;
    margin-bottom: .5rem;
}

.btn {
    @extend .large;
    padding: .3em .6em;
    border: $border;
    border-color: $blue;
    border-left: 0;
    margin-left: -1px;
    background: $blue;
    color: #fff;
    border-top-right-radius: 2px;
    border-bottom-right-radius: 2px;
    opacity: .8;
    transition: all linear 125ms;
    &:hover, &:active, &:focus {
        opacity: 1;
        background-color: $blue-darker;
        border-color: darken($blue-darker, 10%);
    }
}

.card {
    // @extend .m-a-1;
    // calc(1em + .5vw);
    // margin-left:  1em;
    // margin-right: ;
    margin-bottom: $fallback-unit-spacing;
    margin-bottom: $unit-spacing;
    border: $border;
    padding: $fallback-unit-spacing;
    padding: $unit-spacing;
    box-shadow: $box-shadow;
    background: #fff; /* fallback for old browsers */
    // background: -webkit-linear-gradient(to left, rgba(255,255,255, .2) , rgba(255,255,255, 1));
    // background: linear-gradient(to left, rgba(255,255,255, .2) , rgba(255,255,255, 1));
}

.forecast-secondary li:first-child {
    border-top: 1px solid rgba(220,220,220, .5);
    margin-top: .66em;
    padding-top: .66em;    
}

/* card-separator */
.forecast-secondary li {
    border-bottom: $border;
    margin-bottom: .66em;
    padding-bottom: .66em;    
}

.forecast-secondary li .data-secondary {
    display: inline-block;
    min-width: 2.5em;
}

.forecast-secondary li:last-child {
    border: 0;
    padding: 0;
    margin: 0;
}

.status-primary {
    font-size: 3em;
    font-weight: 200;
}

.data-primary {
    @extend .large;
    margin-top: .3em;
}

.data-secondary {
    @extend .small;
    @extend .muted;
}

/* ---------------------------------------- */
/* Responsive */

@media (min-width: 481px){
    .card {
        margin-left: $fallback-unit-spacing;
        margin-left: $unit-spacing;
        margin-right: $fallback-unit-spacing;
        margin-right: $unit-spacing;
        border-radius: 2px;
    }
}

/* ---------------------------------------- */
/* Animation */

svg .rain {
    animation: rain 5s ease-in infinite;
    &:nth-child(2) {
        animation-delay: 0s;
    }
    &:nth-child(3) {
        animation-delay: 0.5s;
    }
    &:nth-child(4) {
        animation-delay: 0.75s;
    }
}

@keyframes rain {
    0% {
        opacity: 0;
        transform: translateY(-.1em);
    }
    70% {
        opacity: 1;
    }

    90% {
        opacity: .9;
    }
    
    100% {
        transform: translateY(0);
        opacity: 0;
        // transform: translateY(-.1em);
    }
}

// .fade-in {
//     animation: fade-in .5s ease-in-out;
// }

@keyframes fade-in {
  0% {
    transform: scale3d(0, 0, 0);
    opacity: 0;
  }

  50% {
    transform: scale3d(1.05, 1.05, 1.05);
  }

  100% {
    opacity: 1;
    transform: scale3d(1, 1, 1);
  }
}


/* ---------------------------------------- */
/* Utilities */

.flex {
    display: flex;
    align-items: flex-start;
}

.wrap {
    flex-wrap: wrap;
}

.center {
    align-self: center;
}

.p-a-1 {
    padding: $fallback-unit-spacing;
    padding: $unit-spacing;

}

.m-a-1 {
    margin: $fallback-unit-spacing;
    margin: $unit-spacing;

}

.m-y-1 {
    margin-top: $fallback-unit-spacing;
    margin-top: $unit-spacing;
    margin-bottom: $fallback-unit-spacing;
    margin-bottom: $unit-spacing;
}

.m-x-1 {
    margin-right: $fallback-unit-spacing;
    margin-left: $fallback-unit-spacing;
    margin-right: $unit-spacing;
    margin-left: $unit-spacing;
}

.nowrap {
    white-space: nowrap;

}

/* ---------------------------------------- */
/* SVG icon, colors */

svg { // width: 1.5em inlined
    @extend .center;
    @extend .m-x-1;
    min-width: 32px; // fallback
    max-width: 72px; // fallback
    min-width: 4rem;
    max-width: 6rem;
    max-height: 72px; // fallback
    max-height: 6rem;
    padding: .1em;
    box-sizing: content-box;
}

.sun {
    fill: #F5A623;
}

.moon {
    fill: #1E256C;
}

.stars {
    fill: #663399;
    fill: rebeccapurple;
}

// cloudy & fog
.cloud {
    fill: #36383C;
}

// rain, drizzle, snow
.rain {
    fill: $blue;
}

// sleet, hail
.hail {
    fill: $blue-darker;
}

.wind {
    fill: #6F8F9D;
}

.tornado {
    fill: #003952;
}

.bolt {
    fill: #F2E000;
}

/* ---------------------------------------- */
/* // Accessibility */

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    border: 0;
}

/* rule sets for windows high contrast mode */
@media (-ms-high-contrast: active) {
    *, body {
        background: #000 !important;
        color: #fff !important;
        font-size: 32px;
        font-size: 2rem;
    }
    a, button, input {
        color: #0ff !important; // cyan
        text-decoration: underline !important;
        text-shadow: none !important;
    }
    button, input {
        border: 1px solid #0ff !important;
    }
    a:hover, a:focus, button:hover, button:focus {
        color: #6F0 !important; // neon green
    }
    svg {
        display: none;
    }
}

